--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ body {
 
 #andre-header-photo{
     display: block;
-    position:fixed;
+    position:absolute;
     bottom:0px;
     height : 85vh;
     margin-left: -250px;
@@ -48,9 +48,13 @@ body {
     color: var(--header-color);
     padding: 40px;
     margin-left: auto;
-    margin-top: -20vh;
+    margin-top: -10vh;
     text-align: right;
     font-size: 2em;
+    h1, p{
+        margin-block-start: 0em;
+        margin-block-end: 0.2em;
+    }
     p {
         color: var(--text-dark);
         font-size: .8em;
