--- a/css/style.css
+++ b/css/style.css
@@ -133,6 +133,7 @@ a, a:link, a:visited, a:focus, a:active{
 }
 
 .sliders{
+    display: flex;
     height: 100vh;
     width:100vw;
     white-space: normal;
