--- a/css/style.css
+++ b/css/style.css
@@ -132,6 +132,10 @@ a, a:link, a:visited, a:focus, a:active{
     overflow-x: scroll;
 }
 
+.scroll::-webkit-scrollbar {
+    display: none;
+}
+
 .sliders{
     display: flex;
     height: 100vh;
@@ -150,7 +154,7 @@ a, a:link, a:visited, a:focus, a:active{
 
 
 .text-slider-one{
-    min-height: 100vh;
+    min-height: 88vh;
     max-width: var(--pages-width);
     padding: 5vh;
     margin: auto;
@@ -176,7 +180,7 @@ a, a:link, a:visited, a:focus, a:active{
 }
 
 .text-slider-two{
-    min-height: 100vh;
+    min-height: 88vh;
     max-width: var(--pages-width);
     padding: 5vh;
     margin: auto;
@@ -201,7 +205,7 @@ a, a:link, a:visited, a:focus, a:active{
 }
 
 .text-slider-three{
-    min-height: 100vh;
+    min-height: 88vh;
     max-width: var(--pages-width);
     padding: 5vh;
     margin: auto;
@@ -243,7 +247,8 @@ a, a:link, a:visited, a:focus, a:active{
 }
 
 .text-slider-four{
-    min-height: 100vh;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    min-height: 88vh;
     max-width: var(--pages-width);
     padding: 5vh;
     margin: auto;
@@ -273,7 +278,7 @@ a, a:link, a:visited, a:focus, a:active{
 
 .two-text-slider-one{
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-    min-height: 100vh;
+    min-height: 88vh;
     max-width: var(--pages-width);
     padding: 5vh;
     margin: auto;
@@ -300,7 +305,7 @@ a, a:link, a:visited, a:focus, a:active{
 
 .two-text-slider-two{
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-    min-height: 100vh;
+    min-height: 88vh;
     max-width: var(--pages-width);
     padding: 5vh;
     margin: auto;
@@ -326,7 +331,7 @@ a, a:link, a:visited, a:focus, a:active{
 }
 
 .two-text-slider-three{
-    min-height: 100vh;
+    min-height: 88vh;
     max-width: var(--pages-width);
     color: #000000;
     padding: 5vh;
